# MicroPython_ISL29125

./: README.rst  examples.json  package.json  pyproject.toml
docs/: api.rst  conf.py
examples/: isl29125_operation_mode.py  isl29125_simpletest.py
micropython_isl29125/: isl29125.py
